<resources>
    <string name="app_name">Mobile Banking</string>
    <string name="sign_in">Sign In</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="cookies">The fishtext website will help a designer, layout designer, or webmaster to generate several paragraphs of more or less meaningful fish text in Russian, and a novice speaker to hone his public speaking skills at home. When creating the generator, we used the well-known universal code of speeches. The text is generated randomly in paragraphs from two to ten sentences per paragraph, which allows you to make the text more attractive and lively for visual and auditory perception</string>
    <string name="service_privacy_policy">\tService privacy policy</string>
    <string name="i_agree">\tI agree with all terms and conditions.</string>
    <string name="continue_text">Continue</string>
    <string name="_998_00_000_00_00">00 000 00 00</string>
    <string name="forgot_password">Forgot password!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="have_an_account">Have an account?</string>
    <string name="minimum_length_of_firstname_is_3">Minimum length of firstname is 3</string>
    <string name="minimum_length_of_cardname_is_3">Minimum length of name is 3</string>
    <string name="minimum_length_of_lastname_is_3">Minimum length of lastname is 3</string>
    <string name="minimum_length_of_password_is_4">Minimum length of password is 4</string>
    <string name="please_connect_to_internet">Please connect to internet</string>
    <string name="something_wrong_please_try_again_later">Something wrong\nplease try again later…</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="invalid_card_number">Invalid card number</string>
    <string name="confirmation">Confirmation</string>
    <string name="code_sent_to_number">Code sent to number</string>
    <string name="request_via">Request in</string>
    <string name="confirm">Confirm</string>
    <string name="incorrect_code">Please try again with a code error!</string>
    <string name="send_again">Send again</string>
    <string name="enter_your_pin_code">Enter your PIN code</string>
    <string name="confirm_the_new_pin_code">Confirm the new PIN code</string>
    <string name="my_account">My accounts</string>
    <string name="balance">Balance</string>
    <string name="you_can_add_your_bank_cards">You can add your bank cards</string>
    <string name="add_card">Add Card</string>
    <string name="card_number">Card number</string>
    <string name="card_name">Card name</string>
    <string name="name">name</string>
    <string name="_0000_0000_0000_0000">0000 0000 0000 0000</string>
    <string name="expired_date">Expired date</string>
    <string name="_00_00">00/00</string>
    <string name="month_or_year_is_invalid">Month or year is invalid</string>
    <string name="close">Close</string>
    <string name="edit_card">Edit card</string>
    <string name="edit">Edit</string>
    <string name="successfully_added">Successfully Added</string>
    <string name="successfully_edited">Successfully Edited</string>
    <string name="successfully_deleted">Successfully Deleted</string>
    <string name="view_receipt">View receipt</string>
    <string name="delete">Delete</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="are_you_sure">Are you sure you want to delete this card? This action cannot be undone. Please confirm to proceed.</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="security">Security</string>
    <string name="transfer_money">Transfer money</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter amount</string>
    <string name="select_card">Select card</string>
    <string name="start_with_adding_card">Start with adding card</string>
    <string name="send_to">Send to</string>
    <string name="identified_user">Identified user</string>
    <string name="tap_to_select_card">Tap to select card</string>
    <string name="can_not_send">Can not send without accurate amount</string>
    <string name="to_proceed_with">To proceed with your transaction, please enter the confirmation code that has been sent to your phone.</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="successfully_transferred">Successfully transferred!</string>
    <string name="history">History</string>
</resources>