<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/abel_text_style"
        android:text="@string/sign_up" />

    <TextView
        style="@style/below_input_text_style"
        android:layout_marginTop="20dp"
        android:text="@string/first_name" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_style">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="15"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/below_input_text_style"
        android:text="@string/last_name" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_style">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="15"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/below_input_text_style"
        android:text="@string/phone_number" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_style"
        android:hint="@string/_998_00_000_00_00"
        app:prefixText="+998"
        app:startIconDrawable="@drawable/uzbekistan_map_flag">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number"
            style="@style/phone_edittext_style" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/below_input_text_style"
        android:text="@string/password" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_style"
        app:endIconDrawable="@drawable/eye_password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/password_edittext_style" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/error_message"
        android:visibility="gone"
        style="@style/below_input_text_style"
        android:textColor="@color/error_red"
        android:layout_marginBottom="8dp"
        android:textStyle="normal"
        tools:text="Error message." />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.leaf.mobilebanking.ui.customview.Button
        android:id="@+id/sign_up"
        style="@style/tall_button_style"
        app:isEnabled="true"
        app:text="@string/sign_up"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="4dp">

        <TextView
            style="@style/below_input_text_style"
            android:layout_marginVertical="2dp"
            android:textSize="12sp"
            android:text="@string/have_an_account" />

        <TextView
            android:id="@+id/sign_in_ask"
            android:layout_marginVertical="2dp"
            style="@style/below_input_text_style"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:textColor="@color/primary_blue"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            android:text="@string/sign_in" />

    </LinearLayout>

</LinearLayout>