<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/back"
            style="@style/arrow_back_style" />

        <TextView
            android:id="@+id/title"
            style="@style/title_text_style"
            android:layout_gravity="center"
            android:text="@string/confirmation" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="18sp"
        android:text="@string/to_proceed_with" />

    <TextView
        style="@style/below_input_text_style"
        android:text="@string/confirmation_code" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_style"
        app:endIconDrawable="@drawable/eye_password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/verification"
            style="@style/password_edittext_style" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?selectableItemBackground"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginEnd="4dp"
            android:text="@string/request_via" />

        <TextView
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black" />

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.leaf.mobilebanking.ui.customview.Button
        android:id="@+id/confirm"
        style="@style/tall_button_style"
        app:isEnabled="true"
        app:text="@string/confirm"/>

</LinearLayout>