<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:padding="16dp">

    <ImageView
        android:id="@+id/back"
        style="@style/arrow_back_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmation"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="18sp"/>

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/gray"
        android:text="@string/code_sent_to_number" />

    <TextView
        android:id="@+id/show_able_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/gray"
        android:text="@string/_998_00_000_00_00" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="30dp">

    <com.leaf.mobilebanking.ui.customview.Verification
        android:id="@+id/verification"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:layout_marginEnd="4dp"
            android:text="@string/request_via" />
        
        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black" />

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.leaf.mobilebanking.ui.customview.Button
        android:id="@+id/confirm"
        style="@style/tall_button_style"
        app:isEnabled="true"
        app:text="@string/confirm"/>

</LinearLayout>