<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/back"
            style="@style/arrow_back_style" />

        <TextView
            android:id="@+id/title"
            style="@style/title_text_style"
            android:layout_gravity="center"
            android:text="@string/settings" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/profileTextView"
            android:layout_width="match_parent"
            android:padding="8dp"
            android:foreground="?attr/selectableItemBackground"
            style="@style/title_text_style"
            android:text="@string/profile"
            android:textStyle="normal"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:background="#B6B6B6" />

        <TextView
            android:id="@+id/securityTextView"
            android:layout_width="match_parent"
            android:padding="8dp"
            android:foreground="?attr/selectableItemBackground"
            style="@style/title_text_style"
            android:text="@string/security"
            android:textStyle="normal"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B6B6B6" />

        <TextView
            android:id="@+id/phoneNumberTextView"
            android:layout_width="match_parent"
            android:padding="8dp"
            android:foreground="?attr/selectableItemBackground"
            style="@style/title_text_style"
            android:text="@string/phone_number"
            android:textSize="18sp"
            android:textStyle="normal"/>

    </LinearLayout>

</LinearLayout>