<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/success" />

    <TextView
        android:id="@+id/info_text"
        style="@style/title_text_style"
        android:layout_margin="16dp"
        android:textSize="40sp"
        android:gravity="center"
        android:text="@string/successfully_added" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/forgot_pass"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:textColor="@color/primary_blue"
        android:text="@string/view_receipt" />

    <com.leaf.mobilebanking.ui.customview.Button
        android:id="@+id/close"
        style="@style/tall_button_style"
        app:isEnabled="true"
        app:text="@string/close" />

</LinearLayout>