<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/back"
            style="@style/arrow_back_style" />

        <TextView
            android:id="@+id/title"
            style="@style/title_text_style"
            android:layout_gravity="center"
            android:text="@string/profile" />

    </FrameLayout>

    <ImageView
        android:layout_margin="16dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/profile"/>

    <TextView
        style="@style/below_input_text_style"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:text="@string/first_name" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_style">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLength="15"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="@style/below_input_text_style"
        android:layout_width="match_parent"
        android:text="@string/last_name" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/text_input_layout_style">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLength="15"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/error_message"
        android:visibility="gone"
        android:layout_width="match_parent"
        style="@style/below_input_text_style"
        android:textColor="@color/error_red"
        android:layout_marginBottom="8dp"
        android:textSize="12sp"
        android:textStyle="normal"
        tools:text="Error message." />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.leaf.mobilebanking.ui.customview.Button
        android:id="@+id/save"
        style="@style/tall_button_style"
        app:isEnabled="true"
        app:text="Save"/>

</LinearLayout>